--- a/jquery-extensions.html
+++ b/jquery-extensions.html
@@ -1,2 +1,2 @@
-<script src="dist/jquery.js"></script>
+<link rel="import" href="../elliptical-jquery/jquery.html">
 <script src="dist/jquery.extensions.js"></script>
