--- a/jquery-extensions.html
+++ b/jquery-extensions.html
@@ -1,2 +1,2 @@
-<link rel="import" href="../elliptical-jquery/jquery.html">
+<script src="../jquery/dist/jquery.js"></script>
 <script src="dist/jquery.extensions.js"></script>
