Updated jquery ref

--- a/jquery-extensions.html
+++ b/jquery-extensions.html
@@ -1,2 +1,2 @@
-<script src="../jquery/dist/jquery.js"></script>
+<link rel="import" href="../jquery-import/jquery.html">
 <script src="dist/jquery.extensions.js"></script>
